@@ -429,6 +429,21 @@ Info: The source tarball contains a prebuilt binary for Microsoft Windows.
  the upstream distribution instead.  If not, you may want to ask upstream
  to provide source-only tarballs.
 
+Tag: source-contains-waf-binary
+Severity: important
+Certainty: certain
+Info: The source tarball contains a waf binary. This file is a Python
+ script with an embedded bzip2 archive, which is uncompressed and unpacked
+ at runtime.
+ .
+ Although corresponding sources can be easily extracted, FTP Team does not
+ consider waf binary as the preferred form of modification; it should be
+ provided unpacked instead, or completely removed, if possible.
+ .
+ You might want to follow these guidelines to obtain an unpacked waf:
+ http://wiki.debian.org/UnpackWaf
+Ref: http://wiki.debian.org/UnpackWaf, #654523
+
 Tag: tar-errors-from-source
 Severity: normal
 Certainty: wild-guess
