@@ -1,0 +1,6 @@
+Testname: cruft-contains-waf
+Sequence: 6000
+Version: 1.0-1
+Type: non-native
+Description: Check for sources with waf
+Test-For: source-contains-waf-binary
