@@ -1,0 +1,5 @@
+int fun(int a) {
+  /* There is a valid use for this... probably */
+  return (a * a) >> a;
+}
+
